# student-health-kaggle-sandbox

./: .env.example  .gitignore  CLAUDE.md  README.md  menu.yaml  pyproject.toml
.github/workflows/: train-evaluate.yml
docs/: index.html
experiments/: baseline.py  challenger.py
flows/: generate_submission.py  promote.py  train_flow.py
notebooks/: exploration.ipynb
src/evaluate/: run.py
src/features/: run.py
src/serve/: predictor.py
src/tests/: test_features.py
src/train/: run.py
