[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "student-health"
version = "0.1.0"
description = "Kaggle student-health — built on kitchen"
requires-python = ">=3.11"
dependencies = [
    "rkoren-kitchen>=1.0",
    "python-dotenv>=1.0",
    "pyyaml>=6.0",
    "xgboost>=1.7",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "ipykernel>=6.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.pytest.ini_options]
testpaths = ["src/tests"]
